--- a/package.json
+++ b/package.json
@@ -2,5 +2,22 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2"
-  }
+  },
+  "name": "portifolio",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/heronts97/portifolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/heronts97/portifolio/issues"
+  },
+  "homepage": "https://github.com/heronts97/portifolio#readme",
+  "description": ""
 }
